fix: handle 404 error gracefully in settings to allow creation when no settings exist

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/credito-app",
+    "public": "dist/credito-app/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
